# LSS

./: LSS.py
C++/: CMakeCache.txt  CMakeLists.txt  Minutiae_Detection  main.cpp
MCC_LSS/: CMakeLists.txt  MCC_LSS.cpp
Minutia detection C++/: CMakeLists.txt  Data.txt  MCC_LSS.cpp  Makefile  Minutia_Detection.cpp  cmake_install.cmake
Minutiae detection/: minutia_detection.py
